[package]
name = "pf_egl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html



[dependencies]
egl = { features=["dynamic"],package="khronos-egl",git="https://github.com/pigfall/khronos-egl",branch="tzz_dev_base_on_4.1.0"}
libloading = { version = "^0.7"}
